# BookToAudio

./: .env  README.md  config.yaml  pyproject.toml
src/: extractor.py  main.py  rewriter.py  synthesizer.py
