[project]
name = "booktoaudio"
version = "0.1.0"
description = "電子書轉有聲書工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "EbookLib>=0.18",
    "beautifulsoup4>=4.12.3",
    "pymupdf>=1.23.21",
    "pydub>=0.25.1",
    "google-generativeai>=0.4.1",
    "google-cloud-texttospeech>=2.16.1",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1"
]
